Add event ledger using Redis stream which acts as a source of truth for all the scores; history and other operations implemented
